--- a/.gitignore
+++ b/.gitignore
@@ -56,5 +56,7 @@ CLAUDE.md
 *STRATEGY*.md
 *TOS_COMPLIANCE*.md
 *SECURITY_AUDIT*.md
+*TECHNICAL*.md
+TECHNICAL_DOCUMENTATION.md
 .backup/
 sources.json
