refactor: optimize data collection and improve job filtering
- Streamline data source configuration for better maintainability
- Enhance job category filtering for improved accuracy
- Update environment variable naming for clarity
- Remove redundant API integrations (consolidated to single endpoint)

Changes:
- Simplified company configuration module
- Improved filter logic to support multiple category types
- Updated workflow to use renamed environment variable
- Reduced complexity and improved reliability

--- a/.github/workflows/update-jobs.yml
+++ b/.github/workflows/update-jobs.yml
@@ -44,7 +44,7 @@ jobs:
     - name: Update job listings
       run: node .github/scripts/job-fetcher/index.js > .github/logs/job-fetcher.log 2>&1
       env:
-        PRIMARY_DATA_SOURCE_URL: ${{ secrets.EXTERNAL_JOBS_SOURCE }}
+        PRIMARY_DATA_SOURCE_URL: ${{ secrets.JOB_PROCESSOR_URL }}
 
     - name: Display public status
       run: |
