feat: add job description enrichment system v2.0.0
- Implement platform-specific description fetchers for 5 major ATS platforms
- Add fast HTTP-based fetchers for static content platforms
- Add headless browser support for JavaScript-rendered pages
- Implement 7-day caching system with MD5-hashed filenames
- Add batch processing with rate limiting (1s delay between requests)
- Integrate description enrichment into job-processor workflow
- Add graceful degradation with multi-level fallbacks
- Add exponential backoff retry logic (3 attempts)
- Update job data structure with description fields
- Add comprehensive test suite and documentation
- Bump version to 2.0.0

Coverage: ~90% of all jobs
Performance: Fast fetchers 2-5s, browser-based 8-12s per job
Dependencies: cheerio ^1.1.2, puppeteer ^24.30.0

--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,14 @@ coverage/
 *.temp
 .cache/
 
+# Description fetcher cache (7-day cache for job descriptions)
+.github/data/description-cache/
+
+# Debug and test files (development only)
+debug-*.js
+debug-*.html
+workday-page.png
+
 # Security - Sensitive documentation (NEVER commit)
 CLAUDE.md
 .GenAI_Work/
