fix: add debug logging and obfuscated audit system to track posted jobs
Resolves duplicate job posting issue where jobs were posted to Discord
but not marked as posted in database, causing repeated postings.

Changes:
- Enhanced Discord bot with debug logging for posted_jobs.json saves
- Created obfuscated audit log system for git-committed debugging
- Updated workflow to commit audit logs with sanitized data
- Added critical error detection for database save failures

Bot logging improvements:
- markAsPosted() now logs job ID being marked
- savePostedJobs() now logs successful save with count
- Upgraded error logging to highlight critical failures

Audit log system:
- Hashes sensitive data (company names, job titles, Discord IDs)
- Preserves metrics, timestamps, and error messages
- Commits to .github/audit/latest.md for persistent debugging
- Detects critical condition: jobs posted but database not saved

This allows tracking posted_jobs.json updates across workflow runs
while keeping sensitive data out of public git history.

--- a/.github/workflows/update-jobs.yml
+++ b/.github/workflows/update-jobs.yml
@@ -95,6 +95,10 @@ jobs:
         retention-days: 90
         if-no-files-found: warn
 
+    - name: Create obfuscated audit log
+      if: always()
+      run: node .github/scripts/create-audit-log.js
+
     - name: Check for changes
       id: verify-changed-files
       run: |
@@ -168,6 +172,7 @@ jobs:
             git add .github/data/new_jobs.json \
                     .github/data/posted_jobs.json \
                     .github/data/seen_jobs.json \
+                    .github/audit/latest.md \
                     README.md 2>/dev/null || true
 
             # Check if there are still changes to commit
