fix: use correct git conflict resolution to preserve bot updates
CRITICAL ROOT CAUSE: Git workflow was discarding bot's database updates!

The Problem:
- Bot successfully adds jobs to posted_jobs.json
- Workflow stashes the UPDATED file (with new jobs)
- During merge conflicts, `git checkout --ours` was used
- `--ours` = OLD version (before bot ran)
- `--theirs` = NEW version (in the stash, after bot ran)
- Result: Bot's updates were discarded every time there was a conflict

The Fix:
Changed from `git checkout --ours` to `git checkout --theirs` for:
- .github/data/posted_jobs.json
- .github/data/new_jobs.json
- .github/data/seen_jobs.json
- README.md

Now the stashed version (NEW data after bot) is kept, not the old version.

This was why American Express job kept reposting - the database update
was being saved, committed, but then immediately overwritten by the
next workflow run's conflict resolution.

--- a/.github/workflows/update-jobs.yml
+++ b/.github/workflows/update-jobs.yml
@@ -181,11 +181,13 @@ jobs:
               if ! git stash pop; then
                 echo "⚠️  Stash pop had conflicts, resolving..."
 
-                # Take our version (latest scraped data) for all conflicts
-                git checkout --ours .github/data/new_jobs.json 2>/dev/null || true
-                git checkout --ours .github/data/posted_jobs.json 2>/dev/null || true
-                git checkout --ours .github/data/seen_jobs.json 2>/dev/null || true
-                git checkout --ours README.md 2>/dev/null || true
+                # Take stashed version (latest scraped data) for all conflicts
+                # --theirs = what's in the stash (NEW data after bot ran)
+                # --ours = what's in working directory (OLD data before stash)
+                git checkout --theirs .github/data/new_jobs.json 2>/dev/null || true
+                git checkout --theirs .github/data/posted_jobs.json 2>/dev/null || true
+                git checkout --theirs .github/data/seen_jobs.json 2>/dev/null || true
+                git checkout --theirs README.md 2>/dev/null || true
 
                 # Clear the stash
                 git reset
